# healthcare-analytics-dashboard

./: .gitignore  README.md  main.py  model.keras  model_age.keras  model_billing.keras  pyproject.toml  requirements.txt
assets/: style.css
callbacks/: figures.py  metrics.py  model.py
data/: dashboard_log.txt  predictions.csv  predictions_billing.csv  training_history.csv  training_log.txt
layouts/: dashboard.py
utils/: data_loader.py
