[project]
name = "healthcare-analytics-dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Ilya",email = "mnailJk@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.26.0,<2.2.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "dash-bootstrap-components (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
